# tft

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  index.html  package.json  tft.cabal  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: Main.hs
lib/: Commands.hs  Events.hs
src/: App.tsx  Champion.tsx  ForceGraph.tsx  commands.ts  errors.ts  events.ts  game.test.ts  hooks.ts  main.tsx  mapper.ts  pipes.ts  reducer.test.ts  reducer.ts  roundResultForPlayer.test.ts  roundResultForPlayer.ts  server.ts  state.ts  style.css  styled.ts  types.ts  useChampionsQuery.ts  useTraitQuery.ts  utils.test.ts  utils.ts
src/@types/: global.d.ts
src/commands/: endBet.test.ts  endBet.ts  endRound.test.ts  endRound.ts  index.ts  playerBet.test.ts  playerBet.ts  playerCancelBet.test.ts  playerCancelBet.ts  playerJoin.test.ts  playerJoin.ts  playerLeave.test.ts  playerLeave.ts  scheduleEndBet.test.ts  scheduleEndBet.ts  startBet.test.ts  startBet.ts  startGame.test.ts  startGame.ts  startRound.test.ts  startRound.ts  types.ts
src/components/: Admin.tsx  AnimatedAmount.tsx  Bets.tsx  Bookmaker.tsx  DumpState.tsx  ErrorToaster.tsx  JoinGame.tsx  Layout.tsx  Play.tsx  PlayerList.tsx  PlayerListPanel.tsx  PlayerMenu.tsx  RoundHistory.tsx  RoundHistoryPanel.tsx  ScheduleEndBetAction.tsx  Timer.tsx  createCommandButton.tsx
src/game/: constants.ts  defaultState.ts  events.ts  reducer.ts  router.ts  server.ts  types.ts  utils.test.ts  utils.ts
src/round/: queries.test.ts  queries.ts  query.ts
src/stores/: inMemory.ts  index.test.ts  redis.ts  types.ts  (+1 more)
(+28 files in other folders)
