cabal-version:      2.4
name:               tft
version:            0.1.0.0
author:             FranckErnewein
maintainer:         franck.ernewein@gmail.com
extra-source-files: CHANGELOG.md

library tft-lib
  exposed-modules: Commands, Events
  hs-source-dirs: lib
  build-depends:
    aeson
    , containers
    , unordered-containers
    , text
    , base >=4.7 && <5
  default-language: Haskell2010

executable backend
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    aeson
    , uuid
    , random
    , base >=4.7 && <5
    , containers
    , mtl
    , scotty
    , text
    , tft-lib
  default-language: Haskell2010
